--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -12,197 +12,78 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "qadiYD0EfPSd",
-        "outputId": "1f985d18-779d-4093-a63d-768e38f9067c"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<!DOCTYPE html>\r\n",
-              "<html lang=\"en\">\r\n",
-              "\r\n",
-              "<head>\r\n",
-              "  <meta charset=\"UTF-8\" />\r\n",
-              "  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />\r\n",
-              "  <title>Nvidia Search Engine</title>\r\n",
-              "  <link rel=\"stylesheet\" href=\"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css\" />\r\n",
-              "  <link rel=\"stylesheet\" href=\"https://amir3x0.github.io/Cloud-Project-Nvidia/style.css\" />\r\n",
-              "  <script src=\"https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js\"></script>\r\n",
-              "  <script src=\"https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js\"></script>\r\n",
-              "  <script src=\"https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js\"></script>\r\n",
-              "  <script>\r\n",
-              "    const firebaseConfig = {\r\n",
-              "      apiKey: \"AIzaSyAZvGft4R9ax1o2XNk4FmJ2X07WuvUyNO4\",\r\n",
-              "      authDomain: \"class-presentation-79426.firebaseapp.com\",\r\n",
-              "      databaseURL: \"https://class-presentation-79426-default-rtdb.europe-west1.firebasedatabase.app\",\r\n",
-              "      projectId: \"class-presentation-79426\",\r\n",
-              "      storageBucket: \"class-presentation-79426.appspot.com\",\r\n",
-              "      messagingSenderId: \"698863119421\",\r\n",
-              "      appId: \"1:698863119421:web:5ad514ecb5f35bc9d80e54\",\r\n",
-              "      measurementId: \"G-HLSHVVW5K1\",\r\n",
-              "    };\r\n",
-              "    firebase.initializeApp(firebaseConfig);\r\n",
-              "    var db = firebase.database();\r\n",
-              "  </script>\r\n",
-              "  <script src=\"https://cdn.jsdelivr.net/npm/chart.js\"></script>\r\n",
-              "  <style></style>\r\n",
-              "</head>\r\n",
-              "\r\n",
-              "<body class=\"light-theme\">\r\n",
-              "  <div class=\"wrapper\">\r\n",
-              "    <div class=\"navbar\">\r\n",
-              "      <div class=\"logo\">\r\n",
-              "        <i class=\"fas fa-microchip\"></i>\r\n",
-              "        <span>Nvidia Search Engine</span>\r\n",
-              "      </div>\r\n",
-              "      <div class=\"nav-links\">\r\n",
-              "        <a onclick=\"switchPage('searchPage')\">Search</a>\r\n",
-              "        <div class=\"dropdown\">\r\n",
-              "          <span class=\"dropbtn\">Index</span>\r\n",
-              "          <div class=\"dropdown-content\">\r\n",
-              "            <a onclick=\"switchPage('addIndexPage')\">Add New Index</a>\r\n",
-              "            <a onclick=\"switchPage('editIndexPage')\">Edit Index</a>\r\n",
-              "          </div>\r\n",
-              "        </div>\r\n",
-              "        <a onclick=\"switchPage('statisticsPage')\">Statistics</a>\r\n",
-              "        <span class=\"theme-toggle\" onclick=\"toggleTheme()\">Toggle Theme</span>\r\n",
-              "      </div>\r\n",
-              "    </div>\r\n",
-              "\r\n",
-              "    <div id=\"searchPage\" class=\"search-container active\">\r\n",
-              "      <input type=\"text\" id=\"searchQuery\" class=\"search-box\"\r\n",
-              "        placeholder=\"Search Nvidia products, news, or information...\" />\r\n",
-              "\r\n",
-              "      <button id=\"searchButton\" onclick=\"toggleLinksPerPageVisibility(); search();\" class=\"search-button\">\r\n",
-              "        Search\r\n",
-              "      </button>\r\n",
-              "      <button onclick=\"clearSearch()\" class=\"clear-button\" style=\"background-color: #888\">\r\n",
-              "        Clear\r\n",
-              "      </button>\r\n",
-              "      <div id=\"searchResults\" class=\"search-results\"></div>\r\n",
-              "\r\n",
-              "      <!-- Pagination Controls -->\r\n",
-              "      <div id=\"pagination\"></div>\r\n",
-              "    </div>\r\n",
-              "    <!-- Dropdown for selecting number of links per page -->\r\n",
-              "    <div id=\"linksPerPageContainer\">\r\n",
-              "      <span id=\"linksPerPageText\">Links per page:</span>\r\n",
-              "      <select id=\"linksPerPage\" onchange=\"search()\">\r\n",
-              "        <option value=\"5\">5</option>\r\n",
-              "        <option value=\"10\">10</option>\r\n",
-              "        <option value=\"20\">20</option>\r\n",
-              "        <option value=\"50\">50</option>\r\n",
-              "      </select>\r\n",
-              "    </div>\r\n",
-              "\r\n",
-              "\r\n",
-              "      <div id=\"editIndexPage\" class=\"container\">\r\n",
-              "        <h2>Edit Index</h2>\r\n",
-              "        <div class=\"form-container\">\r\n",
-              "            <input type=\"text\" id=\"editTerm\" class=\"input-field\" placeholder=\"Existing term\" />\r\n",
-              "            <button class=\"btn\" onclick=\"fetchTermDetails()\">Fetch Term Details</button>\r\n",
-              "            <div id=\"editDetails\" style=\"display:none;\">\r\n",
-              "                <label for=\"docIdsContainer\" class=\"input-label\">DocIDs:</label>\r\n",
-              "                <div id=\"docIdsContainer\" class=\"doc-ids-container\"></div>\r\n",
-              "                <!-- Updated section for adding a new DocID -->\r\n",
-              "                <input type=\"text\" id=\"newDocTitle\" class=\"input-field\" placeholder=\"Enter new DocID title\" />\r\n",
-              "                <input type=\"text\" id=\"newDocUrl\" class=\"input-field\" placeholder=\"Enter new DocID URL\" />\r\n",
-              "                <input type=\"number\" id=\"newDocOccurrence\" class=\"input-field\" placeholder=\"Enter new DocID occurrence number\" />\r\n",
-              "                <button id=\"addDocIdButton\" class=\"btn\">+ Add DocID</button>\r\n",
-              "            </div>\r\n",
-              "        </div>\r\n",
-              "        <h2 id=\"editMessage\"></h2>\r\n",
-              "    </div>\r\n",
-              "\r\n",
-              "\r\n",
-              "    <div id=\"addIndexPage\" class=\"container\">\r\n",
-              "      <h2>Add term</h2>\r\n",
-              "      <div class=\"form-container\">\r\n",
-              "        <input type=\"text\" id=\"newTerm\" class=\"input-field\" placeholder=\"New term\" />\r\n",
-              "        <input type=\"text\" id=\"docIds\" class=\"input-field\" placeholder=\"DocIDs (comma-separated)\" />\r\n",
-              "        <button class=\"btn\" onclick=\"addTerm()\">Add Term</button>\r\n",
-              "      </div>\r\n",
-              "      <h2 id=\"addMessage\"></h2>\r\n",
-              "    </div>\r\n",
-              "\r\n",
-              "    <div id=\"statisticsPage\" class=\"container\">\r\n",
-              "      <div id=\"statsContainer\">\r\n",
-              "        <h1>Data Statistics</h1>\r\n",
-              "        <div id=\"statsTable\"></div>\r\n",
-              "        <div id=\"chartContainer\">\r\n",
-              "          <div class=\"chartWrapper\">\r\n",
-              "            <canvas id=\"commonTermsChart\"></canvas>\r\n",
-              "          </div>\r\n",
-              "          <div class=\"chartWrapper\">\r\n",
-              "            <canvas id=\"commonLinksChart\"></canvas>\r\n",
-              "          </div>\r\n",
-              "        </div>\r\n",
-              "      </div>\r\n",
-              "    </div>\r\n",
-              "\r\n",
-              "    <!-- Footer -->\r\n",
-              "    <div class=\"footer\">\r\n",
-              "      <div class=\"copyright\">\r\n",
-              "        <p>&copy; Braude's Nvidia Search Engine. All rights reserved.</p>\r\n",
-              "      </div>\r\n",
-              "      <div class=\"footer-options\">\r\n",
-              "        <button onclick=\"changeFontSize('increase')\">\r\n",
-              "          Increase Font Size\r\n",
-              "        </button>\r\n",
-              "        <button onclick=\"changeFontSize('decrease')\">\r\n",
-              "          Decrease Font Size\r\n",
-              "        </button>\r\n",
-              "      </div>\r\n",
-              "    </div>\r\n",
-              "  </div>\r\n",
-              "\r\n",
-              "  <script src=\"https://amir3x0.github.io/Cloud-Project-Nvidia/script.js\"></script>\r\n",
-              "  <!-- <script src=\"./frontend/api.js\"></script> -->\r\n",
-              "</body>\r\n",
-              "\r\n",
-              "</html>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "import requests\n",
-        "from IPython.display import HTML\n",
-        "from IPython.display import IFrame\n",
+        "!pip install jinja2\n",
+        "!rm -rf /content/Project\n",
+        "!git clone -b main https://github.com/amir3x0/Cloud-Project-Nvidia /content/Project"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "##### imports and installations #####\n",
+        "!pip install nltk\n",
         "\n",
-        "# URL of the HTML file\n",
-        "url = 'https://amir3x0.github.io/Cloud-Project-Nvidia/index.html'\n",
+        "import nltk\n",
+        "from nltk.chat.util import Chat, reflections\n",
         "\n",
-        "# Fetching the HTML content\n",
-        "response = requests.get(url)\n",
+        "# Download necessary NLTK data\n",
+        "nltk.download('punkt')\n",
+        "nltk.download('wordnet')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "## debugging only ##\n",
+        "!cd /content/Project && git pull"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import google.colab.output as output\n",
+        "from Project.utils.chatbot_patterns import patterns\n",
         "\n",
-        "if response.status_code == 200:\n",
-        "    html_content = response.text\n",
+        "# Create a chatbot\n",
+        "chatbot = Chat(patterns, reflections)\n",
         "\n",
-        "    # Replacing CSS file URL\n",
-        "    github_pages_css_url =\"https://amir3x0.github.io/Cloud-Project-Nvidia/style.css\"\n",
-        "    html_content = html_content.replace(\"style.css\", github_pages_css_url)\n",
+        "def chat(msg):\n",
+        "      response = chatbot.respond(msg)\n",
+        "      return response\n",
         "\n",
-        "    # Replacing JavaScript file URL\n",
-        "    github_pages_js_url = \"https://amir3x0.github.io/Cloud-Project-Nvidia/script.js\"\n",
-        "    html_content = html_content.replace(\"script.js\", github_pages_js_url)\n",
+        "output.register_callback(\"chat\", chat)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from IPython.display import HTML, Javascript, clear_output\n",
+        "from jinja2 import Environment, FileSystemLoader\n",
         "\n",
-        "    # Displaying the HTML content\n",
-        "    display(HTML(html_content))\n",
-        "else:\n",
-        "    print(f\"Failed to fetch the page: {response.status_code}\")"
+        "env = Environment(loader=FileSystemLoader('/content/Project'))\n",
+        "\n",
+        "clear_output()\n",
+        "template = env.get_template('index.html') #load page\n",
+        "html = HTML(template.render().replace('style.css', 'https://amir3x0.github.io/Cloud-Project-Nvidia/style.css')) #render page\n",
+        "display(Javascript('/content/Project/style.css'))\n",
+        "display(html) #display after rendering page\n",
+        "display(Javascript(f'/content/Project/script.js')) #load utils.js"
       ]
     }
   ],
